# ahk-server

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
.github/workflows/: release.yml
ahk_server/: __main__.py  app.py
