[metadata]

name = ahk-server
version = 0.1.0
author_email = spencer.young@spyoung.com
author = Spencer Young
description = An AutoHotkey server allowing remote clients to execute ahk functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/ahk-server
project_urls =
    Documentation = https://github.com/spyoungtech/ahk-server
    Funding = https://github.com/sponsors/spyoungtech/
    Source = https://github.com/spyoungtech/ahk-server
    Tracker = https://github.com/spyoungtech/ahk-server/issues
keywords =
    ahk
    autohotkey
    windows
    mouse
    keyboard
    automation
    pyautogui
    server
    remote
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
include_package_data = True
python_requires = >=3.8.0
packages =
    ahk_server
install_requires =
    ahk
    fastapi

[options.extras_require]
binary = ahk-binary==2023.9.0
